# LiveGameConway

./: CMakeLists.txt  LICENSE  README.md
SFML/: CMakeLists.txt
code/: Block.cpp  Globals.cpp  Grid.cpp  Main.cpp
include/: Block.hpp  Globals.hpp  Grid.hpp
